<resources>
    <string name="app_name">Smart Home</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- One Word -->
    <string name="am_12">12:00 AM</string>
    <string name="device_name">Device Name</string>
    <string name="empty">Empty</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="blank"> </string>
    <string name="equal_on">=ON</string>
    <string name="equal_off">=OFF</string>
    <string name="link">LINK :</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="title">Title</string>
    <string name="devices">devices</string>
    <string name="device_info">Device Information</string>
    <string name="no_device">No Device Available</string>
    <string name="fan">Fan</string>
    <string name="plug_socket">Plug Socket</string>
    <string name="light_bulb">Light Bulb</string>
    <string name="desc">Description</string>
    <string name="no_light_bulb_available">No Light Bulb Available</string>
    <string name="no_fan_available">No Fan Available</string>
    <string name="no_socket_available">No Socket Switch Available</string>
    <string name="camera_location">Camera Location</string>
    <string name="currently_off">Currently OFF</string>
    <string name="status_date_time">Status Time</string>
    <string name="add_new_device">Add New Device</string>

    <string name="enter_device_name">Enter Device Name</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="enter_port_number">Enter Port Number</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_additional_attributes">Enter Additional Attributes</string>

    <string name="select_device_name">Select Device Name</string>
    <string name="select_device">Select Device</string>
    <string name="select_relay">Select Relay</string>
    <string name="select_location">Select Location</string>


    <string name="edit_title_text_view_ip_attribute">URL Attributes</string>
    <string name="edit_title_text_view_device_name">Device Name</string>
    <string name="edit_title_text_view_device_ip">IP Address</string>
    <string name="edit_title_text_view_device_type">Device Type</string>
    <string name="edit_title_text_view_device_location">Device Location</string>
    <string name="edit_title_text_view_device_relay">Relay Number</string>
    <string name="edit_title_text_view_port_number">Port Number</string>
    <string name="edit_title_text_view_camera_type">Camera Type</string>
    <string name="edit_title_text_view_camera_location">Camera Location</string>

    <string name="hint_url_attributes">URL Attributes :</string>
    <string name="hint_device_nickname">Device Name :</string>
    <string name="hint_device_ip">IP Address :</string>
    <string name="hint_device_type">Device Type :</string>
    <string name="hint_device_location">Device Location :</string>
    <string name="hint_device_port_number">Port Number : </string>
    <string name="hint_device_relay">Relay Number :</string>

    <string name="hint_device_name_wo_colon">Device Name</string>
    <string name="hint_url_attributes_wo_colon">type "*.html" after attribute name!</string>
    <string name="hint_device_ip_attribute_wo_colon">such as attribute.html|php</string>
    <string name="hint_device_ip_wo_colon">such as 192.168.225.100</string>
    <string name="hint_device_port_wo_colon">such as 8080</string>
    <string name="hint_device_type_wo_colon">Device Type</string>
    <string name="hint_device_location_wo_colon">Device Location</string>
    <string name="hint_device_relay_wo_colon">Relay Number</string>

    <string name="tab_devices">Devices</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_cctv_camera">CCTV</string>
    <string name="tab_home">Home</string>
    <string name="tab_favourite">Favourites</string>

    <string name="title_add_new_wifi_device">Add New WiFi </string>
    <string name="title_device">Device</string>
    <string name="title_lighting">Lighting</string>
    <string name="title_light_bulb">Light Bulb</string>
    <string name="title_fan">Fan</string>
    <string name="title_sensor">Sensor</string>
    <string name="title_smart_plug">SmartPlug</string>
    <string name="title_cctv">CCTV</string>
    <string name="title_tv">T.V</string>
    <string name="title_socket">Socket Switches</string>

    <string name="menu_title_change_device_settings">Device Settings</string>
    <string name="menu_title_add">Add New Device</string>
    <string name="menu_title_edit">Edit</string>
    <string name="menu_title_refresh">Refresh</string>
    <string name="menu_title_delete">Delete</string>
    <string name="menu_title_wifi">Enable WiFi</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_backup">Backup Devices</string>
    <string name="desc_light_bulb">Light Bulb</string>

    <string name="key_device">device</string>
    <string name="key_add_device">add_device</string>
    <string name="key_location">key_location</string>
    <string name="key_relay_or_port">key_relay_or_port</string>
    <string name="key_hint">key_hint</string>
    <string name="key_input">key_input</string>
    <string name="key_device_index">key_device_index</string>
    <string name="key_device_name">key_name</string>
    <string name="key_add_device_image">key_add_device_image</string>
    <string name="key_device_type">key_device_type</string>
    <string name="key_ip">key_ip</string>
    <string name="key_dialog_title">dialog_title</string>
    <string name="key_dialog_msg">dialog_msg</string>
    <string name="key_link">key_link</string>

    <string name="title_activity_fullscreen_cctv">FullscreenCCTVActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
