<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/id_menu_wifi"
        android:icon="@drawable/ic_wifi_white_24dp"
        android:title="@string/menu_title_wifi"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_title_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />


    <item
        android:id="@+id/id_menu_add_device"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/menu_title_add"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/id_menu_refresh"
        android:title="@string/menu_title_refresh" />

    <item
        android:id="@+id/id_menu_edit"
        android:title="@string/menu_title_edit" />

    <item
        android:id="@+id/id_menu_delete"
        android:title="@string/menu_title_delete" />
    <item
        android:id="@+id/id_menu_backup"
        android:title="@string/menu_title_backup"
        />
</menu>