<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddActivity"
    >
    <include
        android:id="@+id/id_toolbar_add_activity"
        layout="@layout/toolbar"/>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_device_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="15dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/id_add_device_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/device_icon_light_bulb_off"
                />

        </androidx.cardview.widget.CardView>

        <View style="@style/divider"
            android:layout_width="match_parent"
            android:id="@+id/id_add_new_device_divider"
            android:layout_below="@id/card_device_image"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/id_add_new_device_divider">
            <RelativeLayout
                android:id="@+id/id_add_device_device_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">
                <TextView
                    android:id="@+id/id_inner_text_device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="left"
                    android:text="@string/hint_device_nickname"
                    android:textColor="#000"
                    android:textSize="17sp"
                    />
                <TextView
                    android:id="@+id/id_add_device_input_device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="15sp"
                    android:layout_margin="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/id_inner_text_device_name"
                    android:layout_toRightOf="@id/id_inner_text_device_name"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_edit_gray_24dp"
                    />
            </RelativeLayout>
            <View style="@style/divider" />
            <RelativeLayout
                android:id="@+id/id_add_device_device_ip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">
                <TextView
                    android:id="@+id/id_inner_text_device_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="left"
                    android:text="@string/hint_device_ip"
                    android:textColor="#000"
                    android:textSize="17sp"
                    />
                <TextView
                    android:id="@+id/id_add_device_input_device_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="15sp"
                    android:layout_margin="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/id_inner_text_device_ip"
                    android:layout_toRightOf="@id/id_inner_text_device_ip"
                    />
                <ImageView
                    android:id="@+id/id_add_device_input_qr_scanner"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_edit_gray_24dp"

                    />
            </RelativeLayout>
            <View style="@style/divider" />
            <RelativeLayout
                android:id="@+id/id_add_device_device_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">
                <TextView
                    android:id="@+id/id_inner_text_device_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="left"
                    android:text="@string/hint_device_type"
                    android:textColor="#000"
                    android:textSize="17sp"
                    />
                <TextView
                    android:id="@+id/id_add_device_input_device_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="15sp"
                    android:layout_margin="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/id_inner_text_device_type"
                    android:layout_toRightOf="@id/id_inner_text_device_type"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    />
            </RelativeLayout>
            <View style="@style/divider" />
            <RelativeLayout
                android:id="@+id/id_add_device_device_relay_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">
                <TextView
                    android:id="@+id/id_inner_text_device_relay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="left"
                    android:text="@string/hint_device_relay"
                    android:textColor="#000"
                    android:textSize="17sp"
                    />
                <TextView
                    android:id="@+id/id_add_device_input_device_relay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="15sp"
                    android:layout_margin="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/id_inner_text_device_relay"
                    android:layout_toRightOf="@id/id_inner_text_device_relay"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_edit_gray_24dp"
                    />
            </RelativeLayout>
            <View style="@style/divider" />
            <RelativeLayout
                android:id="@+id/id_add_device_device_location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">
                <TextView
                    android:id="@+id/id_inner_text_device_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="left"
                    android:text="@string/hint_device_location"
                    android:textColor="#000"
                    android:textSize="17sp"
                    />
                <TextView
                    android:id="@+id/id_add_device_input_device_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="15sp"
                    android:layout_margin="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/id_inner_text_device_location"
                    android:layout_toRightOf="@id/id_inner_text_device_location"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_edit_gray_24dp"
                    />
            </RelativeLayout>
            <View style="@style/divider" />
            <Button
                android:id="@+id/id_add_new_device_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save Device"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_device_button"
                />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>
